--- a/dev/Vagrantfile
+++ b/dev/Vagrantfile
@@ -1,57 +1,40 @@
 # vim:ft=ruby
 
-def ncpus
-  case RbConfig::CONFIG['host_os']
-  when /linux/
-    `grep -c processor /proc/cpuinfo`.to_i
-  when /(open|free)bsd/
-    `sysctl -n hw.ncpu`.to_i
-  when /darwin/
-    ((`which hwprefs` != '') ? `hwprefs thread_count` : `sysctl -n hw.physicalcpu`).to_i
-  else
-    $stderr.puts "Unknown architecture ( #{RbConfig::CONFIG["host_os"]} )" \
-      + "assuming one processor."
-    1
-  end
-end
-
+vm_gui = ENV.fetch("SEAFILE_GUI", false)
 
 Vagrant.configure("2") do |config|
   config.vm.box = "ubuntu/trusty64"
-  config.vm.network :private_network, ip: "172.16.90.100", type: "static"
-  config.vm.network "forwarded_port", guest: 8000, host: 8000
-  config.vm.network "forwarded_port", guest: 10001, host: 10001
-  config.vm.network "forwarded_port", guest: 12001, host: 12001
+  config.vm.box_check_update = false
+  config.vm.synced_folder '~/.aptcache/trusty64', '/var/cache/apt/archives', :create => true
 
-  config.vm.provider "virtualbox" do |v|
-    v.gui = ENV.fetch("SEAFILE_GUI", false)
-    v.customize ["modifyvm", :id,
-                 "--memory", 2048,
-                 "--cpus", ncpus,
-                 "--natdnshostresolver1", "on",
-                 "--natdnsproxy1", "on"]
+  config.vm.provision :shell, :path => "../base-provision.sh"
+  config.vm.provision :shell, :path => 'provision.sh'
+  config.vm.provision :shell, :path => 'build.sh'
+  config.vm.provision :shell, :path => 'server.sh', :args => 'init'
 
+  config.vm.provider :vmware_fusion do |v, override|
+    override.vm.box_url = "https://oss-binaries.phusionpassenger.com/vagrant/boxes/latest/ubuntu-14.04-amd64-vmwarefusion.box"
+    v.gui = vm_gui
+    v.vmx["memsize"] = "2048"
+    v.vmx["numvcpus"] = "2"
   end
 
-  config.vm.provider :vmware_fusion do |v|
-    v.gui = ENV.fetch("SEAFILE_GUI", false)
-    v.vmx["memsize"] = "2048"
-    v.vmx["numvcpus"] = ncpus.to_s
+  config.vm.provider :virtualbox do |v, override|
+    override.vm.box_url = "http://files.vagrantup.com/precise64.box"
+    v.gui = vm_gui
+    v.customize ["modifyvm", :id,
+                 "--memory", 2048,
+                 "--cpus", 2,
+                 "--natdnshostresolver1", "on",
+                 "--natdnsproxy1", "on"]
   end
 
   config.vm.define :seafile_dev do |cfg|
     cfg.vm.hostname = "seafile-dev"
-    cfg.vm.synced_folder '~/.aptcache/trusty64', '/var/cache/apt/archives', :create => true
-
-    cfg.vm.provision :shell, :path => 'provision.sh'
-    cfg.vm.provision :shell, :path => 'build.sh'
-    # cfg.vm.provision :shell, :path => 'server.sh'
-
-    cfg.vm.provider :vmware_fusion do |vmware, override|
-      override.vm.box_url = "https://oss-binaries.phusionpassenger.com/vagrant/boxes/latest/ubuntu-14.04-amd64-vmwarefusion.box"
-    end
-    cfg.vm.provider :virtualbox do |virtualbox, override|
-      override.vm.box_url = "http://files.vagrantup.com/precise64.box"
-    end
+    cfg.vm.hostname = "seafile-dev"
+    cfg.vm.network :private_network, ip: "172.16.90.100", type: "static"
+    cfg.vm.network "forwarded_port", guest: 8000, host: 8000
+    cfg.vm.network "forwarded_port", guest: 10001, host: 10001
+    cfg.vm.network "forwarded_port", guest: 12001, host: 12001
   end
 end
