--- a/cluster/Vagrantfile
+++ b/cluster/Vagrantfile
@@ -19,14 +19,14 @@ Vagrant.configure("2") do |config|
 
   # the load balancer node, 512MB mem
   config.vm.define :seafile_lb do |cfg|
-    cfg.vm.hostname = "seafile-load-balancer"
+    cfg.vm.hostname = "lb"
     cfg.vm.provision :shell, :path => "provision.sh", :args => "lb"
     cfg.vm.network :private_network, ip: "172.16.2.10"
   end
 
   # worker node 1, 512MB mem
   config.vm.define :seafile_node1 do |cfg|
-    cfg.vm.hostname = "seafile-node1"
+    cfg.vm.hostname = "node1"
     cfg.vm.provision :shell, :path => "provision.sh", :args => "normal"
     cfg.vm.network :private_network, ip: "172.16.2.11"
     cfg.vm.synced_folder "data/node1", "/data", :create => true
@@ -34,7 +34,7 @@ Vagrant.configure("2") do |config|
 
   # worker node 2, 2G mem, for it runs the background tasks
   config.vm.define :seafile_node2 do |cfg|
-    cfg.vm.hostname = "seafile-node2"
+    cfg.vm.hostname = "node2"
     cfg.vm.provision :shell, :path => "provision.sh", :args => "background"
     cfg.vm.network :private_network, ip: "172.16.2.12"
     cfg.vm.synced_folder "data/node2", "/data", :create => true
