[cluster] update readme

--- a/cluster/seafile-haproxy.cfg
+++ b/cluster/seafile-haproxy.cfg
@@ -20,6 +20,7 @@ listen seahub 0.0.0.0:80
     option httplog
     option dontlognull
     option forwardfor
+    balance roundrobin
     server seahubserver01 node1:80 check port 11001
     server seahubserver02 node2:80 check port 11001
 
