add scripts to test cluster deployments

--- a/cluster/seafile-nginx.conf
+++ b/cluster/seafile-nginx.conf
@@ -1,6 +1,6 @@
 server {
     listen 80;
-    server_name 172.16.2.10;
+    server_name 172.16.2.10 default_server;
     location / {
         fastcgi_pass    127.0.0.1:8000;
         fastcgi_param   SCRIPT_FILENAME     $document_root$fastcgi_script_name;
