--- a/dev/Vagrantfile
+++ b/dev/Vagrantfile
@@ -1,6 +1,7 @@
 # vim:ft=ruby
 
 vm_gui = ENV.fetch("SEAFILE_GUI", false)
+vm_ram = ENV.fetch("SEAFILE_DEV_VM_RAM", 2048).to_i
 
 Vagrant.configure("2") do |config|
   config.vm.box = "ubuntu/trusty64"
@@ -15,7 +16,7 @@ Vagrant.configure("2") do |config|
   config.vm.provider :vmware_fusion do |v, override|
     override.vm.box_url = "https://oss-binaries.phusionpassenger.com/vagrant/boxes/latest/ubuntu-14.04-amd64-vmwarefusion.box"
     v.gui = vm_gui
-    v.vmx["memsize"] = "2048"
+    v.vmx["memsize"] = vm_ram.to_s
     v.vmx["numvcpus"] = "2"
   end
 
@@ -23,7 +24,7 @@ Vagrant.configure("2") do |config|
     override.vm.box_url = "http://files.vagrantup.com/precise64.box"
     v.gui = vm_gui
     v.customize ["modifyvm", :id,
-                 "--memory", 2048,
+                 "--memory", vm_ram,
                  "--cpus", 2,
                  "--natdnshostresolver1", "on",
                  "--natdnsproxy1", "on"]
