--- a/dev/Vagrantfile
+++ b/dev/Vagrantfile
@@ -5,9 +5,11 @@ vm_ram = ENV.fetch("SEAFILE_DEV_VM_RAM", 1024).to_i
 vm_cpus = ENV.fetch("SEAFILE_DEV_VM_CPUS", 2).to_i
 
 Vagrant.configure("2") do |config|
-  config.vm.box = "ubuntu/trusty64"
+  config.vm.box = "boxcutter/ubuntu1404-desktop"
   config.vm.box_check_update = false
-  config.vm.synced_folder '~/.aptcache/trusty64', '/var/cache/apt/archives', :create => true
+  # Removes annoying message about public key replacement
+  config.ssh.insert_key = false
+  config.vm.synced_folder "~/.aptcache/trusty64", "/var/cache/apt/archives", :create => true, mount_options: ["dmode=777,fmode=666"]
 
   config.vm.provision :shell, :path => "../base-provision.sh"
   config.vm.provision :shell, :path => 'provision.sh'
@@ -28,6 +30,7 @@ Vagrant.configure("2") do |config|
                  "--cpus", vm_cpus,
                  "--natdnshostresolver1", "on",
                  "--natdnsproxy1", "on"]
+    v.customize ["modifyvm", :id, "--accelerate3d", "off"]
   end
 
   config.vm.define :seafile_dev do |cfg|
